# FRUT

./: .appveyor.yml  .azure-pipelines.yml  .cirrus.yml  .clang-format  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JUCE.cmake  LICENSE  README.md  README.rst
Jucer2CMake/: CMakeLists.txt  main.cpp
Jucer2CMake/src/: argh.hpp  juce6.hpp  juce_core.hpp  main.cpp  reprojucer.hpp  utils.hpp
Jucer2CMake/tests/: .gitignore  apply-Jucer2CMake-juce6-to-test-jucers.cmake
Jucer2CMake/tests/audioplug6/: CMakeLists.txt  audioplug6.jucer
Jucer2CMake/tests/audioplug6-default/: CMakeLists.txt  audioplug6.jucer
Jucer2CMake/tests/audioplug6-default/Source/: PluginEditor.h  PluginProcessor.cpp
Jucer2CMake/tests/audioplug6/Source/: PluginEditor.cpp  PluginProcessor.h
Jucer2CMake/tests/consoleapp6/: CMakeLists.txt  consoleapp6.jucer
Jucer2CMake/tests/consoleapp6-default/: consoleapp6.jucer
Jucer2CMake/tests/consoleapp6-default/Source/: Main.cpp
Jucer2CMake/tests/guiapp6/: CMakeLists.txt  guiapp6.jucer
Jucer2CMake/tests/guiapp6-default/: CMakeLists.txt  guiapp6.jucer
Jucer2CMake/tests/guiapp6-default/Source/: Main.cpp
Jucer2CMake/tests/guiapp6/Source/: MainComponent.cpp  MainComponent.h
Jucer2Reprojucer/: CMakeLists.txt  commits.hpp  features.cpp  features.hpp  main.cpp
ci/: CMakeLists.txt  apply-Jucer2CMake-reprojucer-to-JUCE-jucers.cmake  apply-Jucer2CMake-reprojucer-to-test-jucers.cmake  apply-Jucer2CMake-to-JUCE-jucers.cmake  apply-Jucer2CMake-to-test-jucers.cmake  apply-Jucer2Reprojucer-to-JUCE-jucers.cmake  apply-Jucer2Reprojucer-to-test-jucers.cmake  azure-pipelines-steps.yml  fail-if-CMake-version-3.14-or-more.cmake  ubuntu-xenial.dockerfile
ci/AllJuceProjects/: CMakeLists.txt
ci/JuceProjects/: CMakeLists.txt
ci/JuceProjects-4.2.0/: CMakeLists.txt
ci/JuceProjects-4.3.1/: CMakeLists.txt
ci/ReprojucerHelpers/: CMakeLists.txt
ci/azure-pipelines/: steps-Makefiles.yml  steps-VS.yml  steps-Xcode.yml  steps-iOS.yml
cmake/: AppConfig.h  Info.plist  (+8 more)
cmake/BinaryDataBuilder/: .gitignore  CMakeLists.txt  main.cpp
cmake/BinaryDataBuilder/Source/: jucer_Headers.h
cmake/BinaryDataBuilder/Source/Application/: jucer_CommonHeaders.h  jucer_OpenDocumentManager.h
cmake/BinaryDataBuilder/Source/Project/: jucer_Project.h
cmake/BinaryDataBuilder/Source/Project Saving/: jucer_ResourceFile.cpp  jucer_ResourceFile.h
cmake/BinaryDataBuilder/Source/Utility/: jucer_CodeHelpers.cpp  jucer_CodeHelpers.h  jucer_Colours.h  jucer_FileHelpers.cpp  jucer_FileHelpers.h  jucer_MiscUtilities.cpp  jucer_MiscUtilities.h
cmake/BinaryDataBuilder/extras/Projucer/Source/: jucer_Headers.h
cmake/BinaryDataBuilder/modules/juce_gui_extra/: juce_gui_extra.cpp  juce_gui_extra.h
cmake/IconBuilder/: CMakeLists.txt  main.cpp
cmake/IconBuilder/Source/: jucer_Headers.h
cmake/IconBuilder/Source/Project Saving/: jucer_ProjectExport_MSVC.h  jucer_ProjectExport_XCode.h  jucer_ProjectExporter.cpp  jucer_ProjectExporter.h
cmake/IconBuilder/Source/Utility/: jucer_FileHelpers.cpp  jucer_FileHelpers.h
cmake/PListMerger/: CMakeLists.txt  main.cpp
cmake/helpers/: CMakeLists.txt
cmake/helpers/BinaryDataBuilder/: CMakeLists.txt  main.cpp
cmake/helpers/IconBuilder/: CMakeLists.txt  main.cpp
cmake/helpers/IconBuilder/Source/: jucer_Headers.h
cmake/tools/: CMakeLists.txt  juce_core.cmake  juce_gui_basics.cmake
cmake/tools/BinaryDataBuilder/: CMakeLists.txt  main.cpp
cmake/tools/IconBuilder/: CMakeLists.txt  main.cpp
cmake/tools/IconBuilder/Source/: jucer_Headers.h
cmake/tools/PListMerger/: CMakeLists.txt  main.cpp
cmake/tools/XcassetsBuilder/: CMakeLists.txt
cmake/tools/XcassetsBuilder/Source/: jucer_Headers.h
examples/: CMakeLists.txt
examples/AnimationAppExample/: CMakeLists.txt
examples/AudioAppExample/: CMakeLists.txt
examples/BLOCKS/BlocksDrawing/: CMakeLists.txt
examples/BLOCKS/BlocksMonitor/: CMakeLists.txt
examples/BLOCKS/BlocksSynth/: CMakeLists.txt
examples/BouncingBallWavetableDemo/: CMakeLists.txt
examples/ComponentTutorialExample/: CMakeLists.txt
examples/Demo/: .gitignore  CMakeLists.txt
examples/HelloWorld/: CMakeLists.txt
examples/MPETest/: CMakeLists.txt
examples/MidiTest/: CMakeLists.txt
examples/NetworkGraphicsDemo/: CMakeLists.txt
examples/OSCMonitor/: CMakeLists.txt
examples/OSCReceiver/: CMakeLists.txt
examples/OSCSender/: CMakeLists.txt
examples/OpenGLAppExample/: CMakeLists.txt
examples/PluckedStringsDemo/: .gitignore  CMakeLists.txt
examples/PlugInSamples/Arpeggiator/: CMakeLists.txt
examples/PlugInSamples/GainPlugIn/: CMakeLists.txt
examples/PlugInSamples/MultiOutSynth/: CMakeLists.txt
examples/PlugInSamples/NoiseGate/: CMakeLists.txt
examples/PlugInSamples/Surround/: CMakeLists.txt
examples/SimpleFFTExample/: CMakeLists.txt
examples/audio plugin demo/: CMakeLists.txt
examples/audio plugin host/: CMakeLists.txt
examples/issue-465/: CMakeLists.txt
examples/issue-465/PlugIn/: CMakeLists.txt
examples/issue-465/PlugIn/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/issue-465/dspCore/: CMakeLists.txt
examples/issue-465/dspCore/src/: Reverb.cpp
examples/issue-465/dspCoreTestHost/: CMakeLists.txt
examples/issue-465/dspCoreTestHost/src/: tst_Reverb.cpp
examples/issue-465/guiCore/: CMakeLists.txt
examples/issue-465/guiCore/src/: ReverbVisualization.cpp
examples/issue-465/guiCoreTestHost/: CMakeLists.txt
examples/issue-465/guiCoreTestHost/src/: Main.cpp  MainComponent.cpp  MainComponent.h
examples/issue-490/: CMakeLists.txt
examples/issue-490/Plugin490/: CMakeLists.txt  Plugin490.jucer
examples/issue-490/Plugin490/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/issue-490/TestingExe/: CMakeLists.txt  TestingExe.jucer
examples/issue-490/TestingExe/Source/: Main.cpp
extras/: CMakeLists.txt
extras/AudioPerformanceTest/: CMakeLists.txt
extras/Projucer/: CMakeLists.txt
extras/UnitTestRunner/: CMakeLists.txt
extras/binarybuilder/: CMakeLists.txt
(+315 files in other folders)
